--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="style.css" />
         <title>My Personal Website</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">  
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="style.css" />
+        <script src="script.js" defer></script>
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <script src="script.js"></script>
+        <div id="logo"></div>
+        <div id="navigation">
+            <div id="about">
+                <h1>About</h1>
+            </div>
+            <div id="tarot">
+                <h1>Tarot</h1>
+            </div>
+            <div id="artwork">
+                <h1>Artwork</h1>
+            </div>
+            <div id="github">
+                <h1>GitHub</h1>
+            </div>
+        </div>
     </body>
 </html>
