Added logo, background circle, and started positioning divs

--- a/index.html
+++ b/index.html
@@ -8,20 +8,37 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <div id="logo"></div>
-        <div id="navigation">
-            <div id="about">
-                <h1>About</h1>
+        <div id="logo">
+            <img src="https://images.squarespace-cdn.com/content/v1/52001f7ce4b0929e453b7ea1/1464555908383-GHGXP9OHTETXAZ89EDA6/logo_transparent.png?format=750w"
+            alt="Lindsay Taylor logo" 
+            title="Lindsay Taylor"/>
+        </div>
+        <div class="content-wrapper">
+            <div id="headers">
+                <div id="about">
+                    <h1>About</h1>
+                    <div class="display-text">
+                        <h2>Hi there!</h2>
+                        <p>My name is Lindsay and I... </p>
+                    </div>
+                </div>
+                <div id="tarot">
+                    <h1>Tarot</h1>
+                    <div id="tarotArray"></div>
+                </div>
+                <div id="artwork">
+                    <a href="https://lindsaytaylor.art/" target="_blank"><h1>Artwork</h1></a>
+                </div>
+                <div id="github">
+                <a href="https://github.com/lindzht" target="_blank"> <h1>GitHub</h1></a>
+                </div>
             </div>
-            <div id="tarot">
-                <h1>Tarot</h1>
-            </div>
-            <div id="artwork">
-                <h1>Artwork</h1>
-            </div>
-            <div id="github">
-                <h1>GitHub</h1>
+            <div class="border-wrap">
+                <div id="circle"></div>
             </div>
         </div>
+        <footer>
+            <div id="contactIcons"></div>
+        </footer>
     </body>
 </html>
