--- a/index.html
+++ b/index.html
@@ -8,35 +8,41 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <!-- <div id="splash-page-container-show">
+            <div class="star-symbol">✴</div>
+            <div class="enter-form">
+                <h1>what's your name?</h1>
+                <input type="text" name="your name" value="name">
+                <input type="button" value="nice to meet you">
+            </div>
+        </div> -->
         <div id="logo">
             <img src="https://images.squarespace-cdn.com/content/v1/52001f7ce4b0929e453b7ea1/1464555908383-GHGXP9OHTETXAZ89EDA6/logo_transparent.png?format=750w"
             alt="Lindsay Taylor logo" 
             title="Lindsay Taylor"/>
         </div>
         <div class="content-wrapper">
-            <div id="headers">
+            <div id="circle">
+                <div id="circle-border">
+                    <div id="circle-inside"></div>
+                </div>
+            </div>
+            <div id="nav-wrapper">
                 <div id="about">
-                    <h1>About</h1>
-                    <div class="display-text">
-                        <h2>Hi there!</h2>
-                        <p>My name is Lindsay and I... </p>
-                    </div>
+                    <h1 class="star">✴</h1>
                 </div>
                 <div id="tarot">
-                    <h1>Tarot</h1>
-                    <div id="tarotArray"></div>
+                    <h1 class="star">✴</h1>
+                    <div id="tarot-array"></div>
                 </div>
                 <div id="artwork">
-                    <a href="https://lindsaytaylor.art/" target="_blank"><h1>Artwork</h1></a>
+                    <a href="https://lindsaytaylor.art/" target="_blank"><h1 class="star">✴</h1></a>
                 </div>
                 <div id="github">
-                <a href="https://github.com/lindzht" target="_blank"> <h1>GitHub</h1></a>
+                <a href="https://github.com/lindzht" target="_blank"> <h1 class="star">✴</h1></a>
                 </div>
             </div>
-            <div class="border-wrap">
-                <div id="circle"></div>
-            </div>
-        </div>
+        </div> 
         <footer>
             <div id="contactIcons"></div>
         </footer>
