adjusted nav icon size, location, made circle bigger

--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
             alt="Lindsay Taylor logo" 
             title="Lindsay Taylor"/>
         </div>
-        <div class="content-wrapper">
-            <div id="circle">
+        <div class="content-container">
+            <div id="circle-show">
                 <div id="circle-border">
                     <div id="circle-inside"></div>
                 </div>
             </div>
-            <div id="nav-wrapper">
+            <div id="nav-container">
+                <div id="collapsed-menu">
+                    <h1 class="star">✴</h1>
+                </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
                 </div>
