--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div id="nav-container">
                 <div id="collapsed-menu">
                     <h1 class="star">✴</h1>
+                    <div id="show-menu-items"></div>
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
