enlarged background circle, moved nav stars, added about text + image

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
+                    <div id="about-show">
+                        <img src="./images/IMG_0478_png.png"
+                        alt="lindsay bio picture"
+                        width="280px"
+                        />
+                        <h2>👋 hey i'm lindsay</h2>
+                        <p>artist + engineer in training</p>
+                    </div>
                 </div>
                 <div id="tarot">
                     <h1 class="star">✴</h1>
