added circle color change function

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <div class="content-container">
             <div id="circle-show">
-                <div id="circle-border">
-                    <div id="circle-inside"></div>
+                <div class="circle-border">
+                    <div class="circle-inside"></div>
                 </div>
             </div>
             <div id="nav-container">
