corrected mouseover and mouseout JS for nav titles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
-                    <div id="show-about">
+                    <div class="show-about">
                         <img src="./images/IMG_0478_png.png"
                         alt="lindsay bio picture"
                         width="280px"
