added about text in JS file. click event on about changes star colors

--- a/index.html
+++ b/index.html
@@ -28,19 +28,12 @@
                 </div>
             </div>
             <div id="nav-container">
-                <div id="collapsed-menu">
+                <div id="razzle-dazzle">
                     <h1 class="star">✴</h1>
-                    <div id="show-menu-items"></div>
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
                     <div class="show-about">
-                        <img src="./images/IMG_0478_png.png"
-                        alt="lindsay bio picture"
-                        width="280px"
-                        />
-                        <h2>👋 hey i'm lindsay</h2>
-                        <p>artist + engineer in training</p>
                     </div>
                 </div>
                 <div id="tarot">
