fixed show/hide content for about, fixed functions for star color changes, fixed click event for about

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
-                    <div class="show-about">
+                    <div class="show-about hide">
+                        <img src="./images/IMG_0478_png.png" 
+                        width="300px"
+                        alt="lindsay" />
+                        <h2>👋 hey i'm lindsay</h2>
+                        <p>artist + engineer in training</p>
                     </div>
                 </div>
                 <div id="tarot">
