added tarot images, started tarot img and description array. Started randomizer function

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 </div>
                 <div id="tarot">
                     <h1 class="star">✴</h1>
-                    <div id="tarot-array"></div>
+                    <div class="tarot-image hide">
+                        <div class="tarot-desc hide"></div>
+                    </div>
                 </div>
                 <div id="artwork">
                     <a href="https://lindsaytaylor.art/" target="_blank"><h1 class="star">✴</h1></a>
