Added createImages function for tarot array. started click function for tarot

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 </div>
                 <div id="tarot">
                     <h1 class="star">✴</h1>
-                    <div class="tarot-image hide">
-                        <div class="tarot-desc hide"></div>
-                    </div>
+                    <div class="tarot-card"></div>
                 </div>
                 <div id="artwork">
                     <a href="https://lindsaytaylor.art/" target="_blank"><h1 class="star">✴</h1></a>
