--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                 </div>
                 <div id="tarot">
                     <h1 class="star">✴</h1>
-                    <div class="tarot-card"></div>
+                    <div class="tarot-display">
+                        <div class="tarot-card"></div>
+                        <div class="tarot-description"></div>
+                    </div>
                 </div>
                 <div id="artwork">
                     <a href="https://lindsaytaylor.art/" target="_blank"><h1 class="star">✴</h1></a>
