added background color

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div id="tarot">
                     <h1 class="star">✴</h1>
-                    <div class="tarot-display">
+                    <div class="tarot-display hide">
                         <div class="tarot-card"></div>
                         <div class="tarot-description"></div>
                     </div>
