added background image and circle image overlay

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
-    <body>
+    <body class="body light">
         <!-- <div id="splash-page-container-show">
             <div class="star-symbol">✴</div>
             <div class="enter-form">
@@ -16,6 +16,7 @@
                 <input type="button" value="nice to meet you">
             </div>
         </div> -->
+        
         <div id="logo">
             <img src="https://images.squarespace-cdn.com/content/v1/52001f7ce4b0929e453b7ea1/1464555908383-GHGXP9OHTETXAZ89EDA6/logo_transparent.png?format=750w"
             alt="Lindsay Taylor logo" 
