moved circle off center to right

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <img src="./images/IMG_0478_png.png" 
                         width="300px"
                         alt="lindsay" />
-                        <h2>👋 hey i'm lindsay</h2>
+                        <h2>👋 i'm lindsay</h2>
                         <p>artist + engineer in training</p>
                     </div>
                 </div>
