logo changed to font style and moved bottom left

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
             </div>
         </div> -->
         
-        <div id="logo">
+        <!-- <div id="logo">
             <img src="https://images.squarespace-cdn.com/content/v1/52001f7ce4b0929e453b7ea1/1464555908383-GHGXP9OHTETXAZ89EDA6/logo_transparent.png?format=750w"
             alt="Lindsay Taylor logo" 
             title="Lindsay Taylor"/>
-        </div>
+        </div> -->
+        <header>
+            <h1>lindsay taylor</h1>
+        </header>
         <div class="content-container">
             <div id="circle-show">
                 <div class="circle-border">
