--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">  
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
@@ -39,10 +40,10 @@
                 <div id="about">
                     <h1 class="star">✴</h1>
                     <div class="show-about hide">
+                        <h2>👋 i'm lindsay</h2>
                         <img src="./images/IMG_0478_png.png" 
                         width="300px"
                         alt="lindsay" />
-                        <h2>👋 i'm lindsay</h2>
                         <p>artist + engineer in training</p>
                     </div>
                 </div>
