--- a/index.html
+++ b/index.html
@@ -36,15 +36,23 @@
             <div id="nav-container">
                 <div id="razzle-dazzle">
                     <h1 class="star">✴</h1>
+                    <div class="razzle-dazzle-div hide"></div>
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
                     <div class="show-about hide">
-                        <h2>👋 i'm lindsay</h2>
-                        <img src="./images/IMG_0478_png.png" 
-                        width="300px"
-                        alt="lindsay" />
-                        <p>artist + engineer in training</p>
+                        <div id="about-header">
+                            <img src="./images/IMG_0478_png.png" 
+                            width="300px"
+                            alt="lindsay" />   
+                        </div>
+                        <div id="bio"> 
+                            <h2>👋 i'm <span>lindsay</span></h2>
+                            <p><em>artist + software engineer in training</em></p>
+                            <p><b>like:</b> good gf sandwiches</p>
+                            <p><b>love:</b> stargazing + thunderstorms</p>
+                            <p><b>gotta have:</b> sleep, coffee + bad tv</p>
+                        </div>
                     </div>
                 </div>
                 <div id="tarot">
