moved tarot div positioning and index

--- a/index.html
+++ b/index.html
@@ -28,11 +28,6 @@
             <h1>lindsay taylor</h1>
         </header>
         <div class="content-container">
-            <div id="circle-show">
-                <div class="circle-border">
-                    <div class="circle-inside"></div>
-                </div>
-            </div>
             <div id="nav-container">
                 <div id="razzle-dazzle">
                     <h1 class="star">✴</h1>
@@ -40,7 +35,7 @@
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
-                    <div class="show-about hide">
+                    <div class="show-about">
                         <div id="about-header">
                             <img src="./images/IMG_0478_png.png" 
                             width="300px"
@@ -67,6 +62,11 @@
                 </div>
                 <div id="github">
                 <a href="https://github.com/lindzht" target="_blank"> <h1 class="star">✴</h1></a>
+                </div>
+            </div>
+            <div id="circle-show">
+                <div class="circle-border">
+                    <div class="circle-inside"></div>
                 </div>
             </div>
         </div> 
