--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
-                    <div class="show-about">
+                    <div class="show-about hide">
                         <div id="about-header">
                             <img src="./images/IMG_0478_png.png" 
                             width="300px"
