razzle star mouseover/mouseout/click events, added video star loop

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Personal Website</title>
+        <title>lindsay taylor</title>
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">  
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet"> 
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -10,20 +10,6 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <!-- <div id="splash-page-container-show">
-            <div class="star-symbol">✴</div>
-            <div class="enter-form">
-                <h1>what's your name?</h1>
-                <input type="text" name="your name" value="name">
-                <input type="button" value="nice to meet you">
-            </div>
-        </div> -->
-        
-        <!-- <div id="logo">
-            <img src="https://images.squarespace-cdn.com/content/v1/52001f7ce4b0929e453b7ea1/1464555908383-GHGXP9OHTETXAZ89EDA6/logo_transparent.png?format=750w"
-            alt="Lindsay Taylor logo" 
-            title="Lindsay Taylor"/>
-        </div> -->
         <header>
             <h1>lindsay taylor</h1>
         </header>
@@ -31,7 +17,11 @@
             <div id="nav-container">
                 <div id="razzle-dazzle">
                     <h1 class="star">✴</h1>
-                    <div class="razzle-dazzle-div hide"></div>
+                    <div class="razzle-dazzle-div hide">
+                        <video autoplay muted loop id="starVideo">
+                            <source src="./videos/starsVideo.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
                 <div id="about">
                     <h1 class="star">✴</h1>
