moved about positioning, about font sizing

--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
                         </div>
                         <div id="bio"> 
                             <h2>👋 i'm <span>lindsay</span></h2>
-                            <p><em>artist + software engineer in training</em></p>
-                            <p><b>like:</b> good gf sandwiches</p>
-                            <p><b>love:</b> stargazing + thunderstorms</p>
-                            <p><b>gotta have:</b> sleep, coffee + bad tv</p>
+                            <p><em>artist + software engineer in training </em></p>
+                            <div id="bio-list">
+                                <p><em>like:</em> good gf sandwiches</p>
+                                <p><em>love:</em> stargazing + thunderstorms</p>
+                                <p><em>gotta have:</em> sleep, coffee + bad tv</p>
+                            </div>
+                            <a href="mailto:llindsayttaylor@gmail.com">✉️</a>
                         </div>
                     </div>
                 </div>
