added tarot reset function to all nav event listeners. changed email icon to font. adjusted minor tarot div and about div spacing

--- a/index.html
+++ b/index.html
@@ -26,20 +26,21 @@
                 <div id="about">
                     <h1 class="star">✴</h1>
                     <div class="show-about hide">
-                        <div id="about-header">
-                            <img src="./images/IMG_0478_png.png" 
-                            width="300px"
-                            alt="lindsay" />   
-                        </div>
+                        <img src="./images/IMG_0478_png.png" width="300px" alt="lindsay" />   
                         <div id="bio"> 
-                            <h2>👋 i'm <span>lindsay</span></h2>
+                            <h2>hey i'm <span>lindsay</span></h2>
                             <p><em>artist + software engineer in training </em></p>
                             <div id="bio-list">
-                                <p><em>like:</em> good gf sandwiches</p>
+                                <ul>
+                                    <li><em>like:</em> good gf sandwiches</li>
+                                    <li><em>love:</em> stargazing + thunderstorms</li>
+                                    <li><em>gotta have:</em> sleep, coffee + bad tv</li>
+                                </ul>
+                                <!-- <p><em>like:</em> good gf sandwiches</p>
                                 <p><em>love:</em> stargazing + thunderstorms</p>
-                                <p><em>gotta have:</em> sleep, coffee + bad tv</p>
+                                <p><em>gotta have:</em> sleep, coffee + bad tv</p> -->
                             </div>
-                            <a href="mailto:llindsayttaylor@gmail.com">✉️</a>
+                            <a href="mailto:llindsayttaylor@gmail.com">email me</a>
                         </div>
                     </div>
                 </div>
