languages and font position adjustments to about and tarot div

--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
                         <img src="./images/IMG_0478_png.png" width="300px" alt="lindsay" />   
                         <div id="bio"> 
                             <h2>hey i'm <span>lindsay</span></h2>
-                            <p><em>artist + software engineer in training </em></p>
+                            <p><em>artist + software engineer in training</em></p>
                             <div id="bio-list">
                                 <ul>
+                                    <li>HTML5, CSS, Javascript</li>
                                     <li><em>like:</em> good gf sandwiches</li>
                                     <li><em>love:</em> stargazing + thunderstorms</li>
                                     <li><em>gotta have:</em> sleep, coffee + bad tv</li>
+                                    <!-- <li><em>languages (so far):</em> HTML5, CSS, Javascript</li> -->
                                 </ul>
-                                <!-- <p><em>like:</em> good gf sandwiches</p>
-                                <p><em>love:</em> stargazing + thunderstorms</p>
-                                <p><em>gotta have:</em> sleep, coffee + bad tv</p> -->
                             </div>
                             <a href="mailto:llindsayttaylor@gmail.com">email me</a>
                         </div>
