laptop media query breakpoint added for laptop, add mobile splash page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <header>
             <h1>lindsay taylor</h1>
         </header>
+        <div id="temp-mobile-splash">
+            <h2>mobile site under construction!</h2>
+            <p>please view on desktop</p>
+            <a href="mailto:llindsayttaylor@gmail.com">✉</a>
+        </div>
         <div class="content-container">
             <div id="nav-container">
                 <div id="razzle-dazzle">
