--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h1>lindsay taylor</h1>
         </header>
         <div id="temp-mobile-splash">
+            <img src="./images/lindsaydrawing5.png" alt="lindsay drawing" title="lindsay" />
             <h2>mobile site under construction!</h2>
             <p>please view on desktop</p>
             <a href="mailto:llindsayttaylor@gmail.com">✉</a>
