mobile header font reduced, reduced line height of mobile text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <div id="temp-mobile-splash">
             <img src="./images/lindsaydrawing5.png" alt="lindsay drawing" title="lindsay" />
-            <h2>mobile site under construction!</h2>
+            <h2><em>mobile site under construction!</em></h2>
             <p>please view on desktop</p>
             <a href="mailto:llindsayttaylor@gmail.com">✉</a>
         </div>
