replaced mobile email icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./images/lindsaydrawing5.png" alt="lindsay drawing" title="lindsay" />
             <h2><em>mobile site under construction!</em></h2>
             <p>please view on desktop</p>
-            <a href="mailto:llindsayttaylor@gmail.com">email me</a>
+            <a href="mailto:llindsayttaylor@gmail.com">✉</a>
         </div>
         <div class="content-container">
             <div id="nav-container">
